@@ -1,3 +1,7 @@
+Wed May 16 14:57:37 GMT 2012  Olly Betts <olly@survex.com>
+
+	* letor_internal.h: Add header multiple include guard.
+
 Wed May 16 13:32:18 GMT 2012  Olly Betts <olly@survex.com>
 
 	* include/xapian/letor.h: Fix typos.
